# retainAI

./: .gitignore  Dockerfile  Installation.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  retainai.yml  setup.ps1  setup.py  test.py
assets/dataPrice/: dataPriceAAPL.csv  dataPriceAMZN.csv  dataPriceCIT.csv  dataPriceEBL.csv  dataPriceGBIME.csv  dataPriceHIDCL.csv  dataPriceMSFT.csv  dataPriceNABIL.csv  dataPriceNVDA.csv  dataPriceTSLA.csv
assets/models/: NAS_AAPL.h5  NAS_AMZN.h5  NAS_MSFT.h5  NAS_NVDA.h5  NAS_TSLA.h5  NPS_CIT.h5  NPS_EBL.h5  NPS_GBIME.h5  NPS_HIDCL.h5  NPS_NABIL.h5
dataPrice/: ADBLData.csv  dataPrice.csv  stock_data_nepse.csv
model/: LSTMmodel.h5
services/: logger.py
services/predictAPI/: predictAPI.py
services/trainmodel/: model.py
services/usemodel/: predictprice.py
services/webscrapper/: nepseScrapper.py  priceScrappy.py
src/services/cacheManager/: cacheManager.py
src/services/database/: postgresbase.py
src/services/logger/: logger.py
src/services/modelManager/: modelCache.py
src/services/pidKiller/: pidkiller.py
src/services/predictAPI/: predictAPI.py
src/services/trainmodel/: model.py
src/services/usemodel/: predictprice.py
src/services/webscrapper/: nas_priceScrappy.py  nps_priceScrappy.py
src/ui/: README.md  index.html  package.json  tailwind.config.ts  ui.py
src/ui/src/: index.css
src/ui/src/components/: ChartControls.tsx  PredictionMethodology.tsx  StockChart.tsx  StockSelector.tsx  TradingHeader.tsx
src/ui/src/data/: mockData.ts
src/ui/src/pages/: Index.tsx
